# JII-MultispeQ

./: README.md  analysis.html  device.html  example-protocols.html  genindex.html  getting-started.html  index.html  install.html  measurement.html  measurements.html  objects.inv  porting.html  project.html  projects.html  protocol.html  protocols.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  working-with-protocols.html
.github/workflows/: sphinx.yml
_downloads/2a63e182714837e1750c9efa2f7b6da3/: protocol-data.py
_downloads/442b8abc5acf588ea88fa07e13175db7/: project-data.py
_downloads/4776a5d11fb35cd297e4f7425c535ae2/: project-data.ipynb
_downloads/86aab5367ac3ce956310642c555f9538/: protocol-data.ipynb
_modules/: index.html
_modules/jii_multispeq/analysis/: basic.html  pirk.html
_modules/jii_multispeq/device/: command.html  connection.html  settings.html
_modules/jii_multispeq/measurement/: checksum.html  file.html  measure.html  notebook.html
_modules/jii_multispeq/project/: file.html  get.html  info.html
_modules/jii_multispeq/protocol/: protocol.html  v_arrays.html
_sources/: device.rst.txt  getting-started.rst.txt  index.rst.txt  install.rst.txt  measurements.rst.txt  working-with-protocols.rst.txt
_sources/modules/: device.rst.txt  measurement.rst.txt  project.rst.txt
_static/examples/python/: PhotosynQ_29652.json  local-device-ports.py
_static/examples/python/output/: local-device-command.json  local-device-info.txt  local-device-measurement.txt  project-data-tutorial-1.txt  project-data-tutorial-2.txt  project-data-tutorial-3.txt  protocol-data-tutorial-3.py
_static/protocols/: template.py
docs/: requirements.txt
docs/source/: analysis.rst  conf.py  example-protocols.rst  getting-started.rst  index.rst  install.rst  measurements.rst  porting.rst  project.rst  projects.rst  protocol.rst  protocols.rst
docs/source/_static/examples/python/: local-device-connect.py  local-device-info.py  local-device-measurement.py  local-files.py  local-measurement.py  project-data.py
docs/source/_static/examples/python/output/: local-device-ports.txt  project-data-tutorial-2.json  protocol-data-tutorial-1.py  protocol-data-tutorial-2.py
docs/source/modules/: protocol.rst
modules/: analysis.html  device.html  measurement.html  project.html  protocol.html
src/jii_multispeq/: __init__.py  about.py  constants.py
src/jii_multispeq/analysis/: __init__.py  basic.py  dataframe.py  pirk.py
src/jii_multispeq/device/: __init__.py  command.py  connection.py  settings.py
src/jii_multispeq/measurement/: __init__.py  checksum.py  file.py  measure.py  notebook.py  sanitize.py
src/jii_multispeq/project/: __init__.py  file.py  get.py  info.py
src/jii_multispeq/protocol/: __init__.py  protocol.py  v_arrays.py
