[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jii_multispeq"
authors = [
  {name = "Sebastian Kuhlgert", email = "sebastian.kuhlgert@jan-ingenhousz-institute.org"},
  {name = "David M. Kramer", email = "david.kramer@jan-ingenhousz-institute.org"},
]
description = "MultispeQ Data Analysis Library - Jan Ingenhousz Institut"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["MultispeQ Data Analysis"]
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
	"Intended Audience :: Scientists",
	"Programming Language :: Python :: 3",
]
dependencies = [
  "requests",
  "pandas",
  "numpy",
  "photosynq_py @ git+https://github.com/Photosynq/PhotosynQ-Python.git",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]

[project.urls]
Source = "https://github.com/SeBassTian/jii_multispeq"
Documentation = "https://github.com/SeBassTian/jii_multispeq/docs"
Changelog = "https://github.com/SeBassTian/jii_multispeq/history.md"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
  "*.tests*", 
  "*.tests.*",
]
# namespaces = false  # true by default

[tool.sphinx]
project = "JII - MultispeQ"
author = "Sebastian Kuhlgert"
copyright = "Jan Ingenhousz Institute"
