[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "jii_multispeq"
authors = [
  { name = "Sebastian Kuhlgert", email = "sebastian.kuhlgert@jan-ingenhousz-institute.org" },
  { name = "David M. Kramer", email = "david.kramer@jan-ingenhousz-institute.org" },
]
description = "MultispeQ Data Analysis Library - Jan Ingenhousz Institut"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["MultispeQ Data Analysis"]
license = { text = "MIT" }
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Scientists",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "requests>=2.32",
  "pandas>=1.4",
  "numpy>=1.22",
  "photosynq_py @ git+https://github.com/Photosynq/PhotosynQ-Python.git",
  "tabulate>=0.9",
  "pyserial>=3.5",
  "ipywidgets>=7.6",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.2,<8.0",
  "furo>=2023.9",
  "myst-parser>=3.0",
  "matplotlib>=3.8",
  "tabulate>=0.9",
  "toml>=0.10",
  "sphinx-copybutton>=0.5",
  "sphinxcontrib-mermaid>=1.0",
  "sphinxext-opengraph>=0.9",
  "sphinx-toolbox>=4.0"
]


[project.urls]
Source = "https://github.com/Jan-IngenHousz-Institute/JII-MultispeQ"
Documentation = "https://jan-ingenhousz-institute.github.io/JII-MultispeQ/"
Changelog = "https://github.com/Jan-IngenHousz-Institute/JII-MultispeQ"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests*", "*.tests.*"]
# namespaces = false  # true by default

[tool.sphinx]
project = "JII - MultispeQ"
author = "Sebastian Kuhlgert"
copyright = "Jan Ingenhousz Institute"
